--- a/css/estudiantes.css
+++ b/css/estudiantes.css
@@ -96,9 +96,8 @@ body{
   
    .menus a:hover{
     background-color:rgb(74, 74, 97);
-    padding: 5px;
+    border-radius: 2rem;
     color: #fff9f9;
-    margin: 5px;
     font-weight: 800;
  
    
