--- a/Home/home.css
+++ b/Home/home.css
@@ -98,9 +98,8 @@ body{
   
    .menus a:hover{
     background-color:rgb(74, 74, 97);
-    padding: 5px;
+    border-radius: 2px;
     color: #fff9f9;
-    margin: 5px;
     font-weight: 800;
  
    
